--- a/.gitignore
+++ b/.gitignore
@@ -6,21 +6,21 @@
 *.so
 *.swp
 
-# Grunt
-node_modules
+# Custom files
+*.map
+*.sass-cache*
 
 # Composer
 vendor
 
+# Node
+node_modules
+
 # PhpStorm
 .idea
 
-# PhpUnit
+# PHPUnit
 phpunit.xml
-
-# Custom files
-*.map
-*.sass-cache*
 
 # This should stay at the bottom
 !.gitkeep
