--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,43 @@
 {
 	"name": "tfrommen/meta-taxonomy",
 	"description": "Registers a taxonomy that provides a high-performance means to query posts in a somewhat meta-based way.",
+	"type": "wordpress-plugin",
+	"keywords": [
+		"meta",
+		"post",
+		"posts",
+		"taxonomies",
+		"taxonomy",
+		"term",
+		"terms"
+	],
 	"homepage": "https://github.com/tfrommen/meta-taxonomy",
 	"license": "GPL-3.0",
 	"authors": [
 		{
 			"name": "Thorsten Frommen",
-			"email": "tf@ipm-frommen.de",
-			"homepage": "http://ipm-frommen.de/wordpress"
+			"email": "info@tfrommen.de",
+			"homepage": "http://tfrommen.de",
+			"role": "Developer"
 		}
 	],
+	"support": {
+		"issues": "https://github.com/tfrommen/meta-taxonomy/issues",
+		"source": "https://github.com/tfrommen/meta-taxonomy"
+	},
 	"require": {
-		"php": ">=5.3.3"
+		"php": ">=5.2.4",
+		"composer/installers": "~1.0"
 	},
 	"require-dev": {
-		"10up/wp_mock": "dev-master"
+		"php": ">=5.3.3",
+		"10up/wp_mock": "dev-master",
+		"mockery/mockery": "~0.9.4",
+		"phpunit/phpunit": "~4.0"
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "1.3.x-dev"
+		}
 	}
 }
