--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,8 +8,8 @@
 	convertWarningsToExceptions="true"
 	>
 	<testsuites>
-		<testsuite>
-			<directory suffix="Test.php">tests</directory>
+		<testsuite name="unit">
+			<directory suffix="Test.php">tests/unit</directory>
 		</testsuite>
 	</testsuites>
 </phpunit>
