--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ php:
   - 7.0
   - hhvm
 
+sudo: false
+
 matrix:
   allow_failures:
     - php: 7.0
@@ -18,4 +20,5 @@ before_script:
   - composer install --no-progress --prefer-source
 
 script:
+  - find src \( -name '*.php' \) -exec php -lf {} \;
   - phpunit
