--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "meta-taxonomy",
-	"version": "1.4.0",
-	"description": "Registers a taxonomy that provides a high-performance means to query posts in a somewhat meta-based way.",
+	"version": "1.3.0",
+	"description": "This plugin registers a taxonomy that provides a high-performance means to query posts in a somewhat meta-based way.",
 	"keywords": [
 		"meta",
 		"post",
